--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,13 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.11",
     "@popperjs/core": "^2.11.8",
+    "angular-imask": "^7.6.1",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
+    "imask": "^7.6.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.21.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
