--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.11",
     "@popperjs/core": "^2.11.8",
     "angular-imask": "^7.6.1",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
